--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <strong>Privacy Policy</strong>
-<p>This privacy policy applies to the Surah Yaseen - QuranHafiz application (hereinafter referred to as the "Application") for mobile
+<p>This privacy policy applies to the Surah Yaseen - QuranHafidz application (hereinafter referred to as the "Application") for mobile
 devices created by Doa Ibu Studios, Inc. (hereinafter referred to as the "Service Provider") as an Ad Supported
 service. This Service is intended for use "AS IS".</p><br><strong>Collection and Use of Information</strong>
 <br>
@@ -62,7 +62,7 @@ Privacy Policy periodically for any changes, as continued use is deemed consent 
 please contact the Service Provider by email at na2nk.kho@gmail.com</p>
 <p>This privacy policy is effective as of June 29, 2024</p>
 <hr>
-<p><br><strong>Surah Yaseen - QuranHafiz</p></strong>
+<p><br><strong>Surah Yaseen - QuranHafidz</p></strong>
 <p>Doa Ibu Studios, Inc.</p>
 </body>
 
